--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,6 +150,16 @@
             android:parentActivityName=".MainActivity">
         </activity>
 
+        <activity
+            android:name="com.lovejoy777.rommate.filepicker.FilePickerActivity"
+            android:theme="@style/Toolbar2">
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
     </application>
 
 </manifest>
