--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
-    compile files('libs/RootTools.jar')
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
