--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
         </activity>
 
         <activity
+            android:name=".MainActivity1"
+            android:label="@string/app_name"
+            android:theme="@style/Toolbar2" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN1" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".bootanimation.Screen1BootAnim"
             android:label="BootAnimation"
             android:theme="@style/Toolbar2" >
@@ -56,17 +67,6 @@
         </activity>
 
         <activity
-            android:name=".bootanimation.DonateBootAnim"
-            android:label="Donate"
-            android:theme="@style/Toolbar2" >
-            <intent-filter>
-                <action android:name="android.intent.action.DONATEBOOTANIM" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity
             android:name=".fonts.Screen1Fonts"
             android:label="Fonts"
             android:theme="@style/Toolbar2" >
@@ -83,17 +83,6 @@
             android:theme="@style/Toolbar2" >
             <intent-filter>
                 <action android:name="android.intent.action.FREEFONTS" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".fonts.DonateFonts"
-            android:label="Donate"
-            android:theme="@style/Toolbar2" >
-            <intent-filter>
-                <action android:name="android.intent.action.DONATEFONTS" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
