--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'commons-codec:commons-codec:1.10'
+    compile 'joda-time:joda-time:2.8.2'
 }
