--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.triplet.play'
 
 android {
     compileSdkVersion 22
@@ -11,12 +12,6 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -24,6 +19,32 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'LICENSE.txt'
     }
+
+
+    play {
+        serviceAccountEmail = System.getenv("CART_EMAIL")
+        pk12File = file(System.getenv("CERT_LOCATION") == null ? 'cert.cert' : System.getenv("CERT_LOCATION"))
+        track = System.getenv("TRACK") == null ? 'alpha' : System.getenv("TRACK")
+    }
+
+    signingConfigs {
+        release {
+            storeFile file(System.getenv("KEY_LOCATION") == null ? 'key.key' : System.getenv("KEY_LOCATION"))
+            storePassword System.getenv("KEY_PASSWORD")
+            keyAlias System.getenv("KEY_ALIAS")
+            keyPassword System.getenv("KEY_ALIAS_PASSWORD")
+        }
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile('proguard-android.txt')
+            signingConfig signingConfigs.release
+        }
+    }
+
 
 }
 
