--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        
+        archivesBaseName = "RomMate"
     }
 
     packagingOptions {
